syntax = "proto3";

package com.bloom42;
option go_package = "accounts";

import "google/protobuf/empty.proto";

// Accounts
service Accounts {
  rpc StartRegistration(StartRegistrationParams) returns (RegistrationStarted);
  rpc VerifyRegistration(VerifyRegistrationParams) returns (google.protobuf.Empty);
  rpc CompleteRegistration(CompleteRegistrationParams) returns (NewSession);
  rpc SendNewRegistrationCode(SendNewRegistrationCodeParams) returns (google.protobuf.Empty);
  rpc SignIn(SignInParams) returns (NewSession);
  rpc SignOut(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc RevokeSession(RevokeSessionParams) returns (google.protobuf.Empty);
  rpc ListSessions(google.protobuf.Empty) returns (Sessions);
}

message StartRegistrationParams {
  string display_name = 1;
  string email = 2;
}

message RegistrationStarted {
  string id = 1;
}

message VerifyRegistrationParams {
  string id = 1;
  string code = 2;
}

message SendNewRegistrationCodeParams {
  string id = 1;
}

message CompleteRegistrationParams {
  string id = 1;
  string username = 2;
  bytes auth_key = 3;
}

message SignInParams {
  string username = 1;
  bytes auth_key = 2;
}

message NewSession {
  string id = 1;
  string token = 2;
}

message Session {
  string id = 1;
  string created_at = 2;
  string ip = 3;
  string device = 4; // empty, reserved
  string location = 5; // empty, reserved
}

message Sessions {
  repeated Session sessions = 1;
}

message RevokeSessionParams {
  string id = 1;
}
